Archive2/cc/2ff569ac60d716/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: static assertion failed: 0 failed
     static_assert( is_number( "0" ), "0 failed" );
     ^
main.cpp:13:5: error: static assertion failed: empty string failed
     static_assert( is_number( "" ), "empty string failed" );
     ^
main.cpp:14:5: error: static assertion failed: 1.23 failed
     static_assert( is_number( "1.23" ), "1.23 failed" );
     ^
main.cpp:15:5: error: static assertion failed: abc failed
     static_assert( is_number( "abc" ), "abc failed" );
     ^
